--- a/Vijay.html
+++ b/Vijay.html
@@ -12,3 +12,5 @@ In 2004, he starred in the action-masala film Ghilli, which became the first Tam
 
 In February 2024, Vijay announced his retirement from films and his forthcoming entry into politics with the launch of his political party, known as Tamilaga Vettri Kazhagam.
 </p>
+
+<p>Contact: 1234567890</p>
